# action-profiler

./: .editorconfig  .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  action.yml  package-lock.json  package.json  rollup.config.ts  tsconfig.json
.claude/commands/: commit-msg.md
.github/workflows/: build-binaries.yml  check-dist.yml  ci.yml  kernel-debug.yml  linter.yml  release.yml  test-profiler.yml  update-artifacts.yml
docs/: ARCHITECTURE.md  RELEASING.md
profiler/: .gitignore  Cargo.toml  README.md
profiler/profiler/: Cargo.toml  build.rs
profiler/profiler-common/: Cargo.toml
profiler/profiler-common/src/: lib.rs
profiler/profiler-ebpf/: Cargo.toml  block_io.bpf.h  oom.bpf.h  process.bpf.h  profiler.bpf.c  profiler.bpf.h  sched.bpf.h  tcp.bpf.h
profiler/profiler-ebpf/src/: block_io.rs  main.rs  oom.rs  process.rs  sched.rs  vmlinux.rs
profiler/profiler-viewer/: Cargo.toml  README.md
profiler/profiler-viewer/src/: aggregate.rs  anomaly.rs  lib.rs  process.rs  tree.rs  types.rs
profiler/profiler/src/: event.rs  loader.rs  main.rs  metrics.rs  utils.rs
profiler/tests/: bpftrace-cheatsheet.bt  index.html  run-profiler-test.sh  wireframe.txt
scripts/: build.sh  dev-setup.sh  generate-vmlinux.sh  inspect-bpf.sh  kernel-debug.sh  release  release-revert.sh
scripts/outs/: kernel-debug-ubuntu-22.04.txt  kernel-debug-ubuntu-24.04.txt  kernel-debug-workspace.txt
src/: main.ts  post.ts
tests/: gantt.html  index.html
