[workspace]
resolver = "2"
members = [
    "profiler",
    "profiler-common",
    "profiler-viewer",
]
default-members = ["profiler", "profiler-common"]

[workspace.package]
license = "MIT"
edition = "2024"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", rev = "519abff", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", rev = "519abff", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.20", default-features = false, features = ["std", "env"] }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }

