[package]
name = "profiler-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
profiler-common = { path = "../profiler-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "profiler"
path = "src/main.rs"
