[package]
name = "profiler"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
profiler-common = { path = "../profiler-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
clap = { workspace = true, features = ["derive"] }
libc = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
[build-dependencies]

[[bin]]
name = "profiler"
path = "src/main.rs"
